--- a/client/components/register.css
+++ b/client/components/register.css
@@ -5,7 +5,13 @@
 }
 
 body {
-  background: #f6f5f7;
+  background-image: url("../images/thaparBg.webp");
+  background-color: #cccccc;
+  height: 500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
