--- a/client/components/home.css
+++ b/client/components/home.css
@@ -1,7 +1,7 @@
 .head {
   margin: 0px;
   padding: 0px;
-  background-image: url("../images/thaparBg.webp");
+  background-image: url("../images/bg.jpeg");
   background-color: #cccccc;
   opacity: 0.9;
   background-position: center;
