--- a/client/components/register.css
+++ b/client/components/register.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url("../images/thaparBg.webp");
+  background-image: url("../images/bg.jpeg");
   background-color: #cccccc;
   height: 500px;
   background-position: center;
