--- a/client/components/home.css
+++ b/client/components/home.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css?family=Cardo:400i|Rubik:400,700&display=swap");
+body {
+  margin: 0px;
+  padding: 0px;
+}
+
 .head {
   margin: 0px;
   padding: 0px;
