integrated backend with frontend

--- a/client/components/css/home.css
+++ b/client/components/css/home.css
@@ -7,7 +7,7 @@ body {
 .head {
   margin: 0px;
   padding: 0px;
-  background-image: url("../images/thaparBg.webp");
+  background-image: url("../img/bg.jpeg");
   background-color: #cccccc;
   opacity: 0.9;
   background-position: center;
