--- a/client/components/css/card.css
+++ b/client/components/css/card.css
@@ -24,7 +24,7 @@
 .card-front {
   height: 100%;
   width: 100%;
-  background-image: url("../images/thaparBg.webp");
+  background-image: url("../img/bg.jpeg");
   background-position: 50% 50%;
   background-size: cover;
   position: absolute;
