--- a/client/components/home.css
+++ b/client/components/home.css
@@ -1,12 +1,18 @@
 @import url("https://fonts.googleapis.com/css?family=Cardo:400i|Rubik:400,700&display=swap");
-body {
+
+* {
   margin: 0px;
   padding: 0px;
+  box-sizing: border-box;
+}
+
+body {
+  background: #f2f4f8;
+  font-family: "Open Sans";
+  overflow-x: hidden;
 }
 
 .head {
-  margin: 0px;
-  padding: 0px;
   background-image: url("../images/bg.jpeg");
   background-color: #cccccc;
   opacity: 0.9;
@@ -20,22 +26,22 @@ body {
   flex-direction: column;
   font-family: "Montserrat", sans-serif;
   height: 100vh;
-  overflow: hidden;
 }
+
+/* Background Photo */
 .bg {
   background-color: white;
   position: absolute;
   opacity: 0.5;
   bottom: 50%;
-  /* left: 10px; */
-  /* max-width: 50%; */
-  /* margin: auto; */
   height: 20%;
   padding: 10px 50%;
   border-radius: 60px;
   overflow-x: hidden;
 }
-.container {
+
+/* Container */
+.text-container {
   color: black;
   position: absolute;
   bottom: 50%;
@@ -43,4 +49,26 @@ body {
   font-weight: bolder;
   border-radius: 20px;
   padding: 50px 50px 50px 50px;
+}
+
+.cards {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  transform: translate(3%, 0);
+  position: relative;
+  top: 200px;
+}
+
+.cards .card {
+  width: 150px;
+  height: 250px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 30px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
