--- a/client/components/css/home.css
+++ b/client/components/css/home.css
@@ -14,6 +14,8 @@ body {
 
 .head {
   background-image: url("../images/bg.jpeg");
+
+  /* background-image: url("../img/bg.jpeg"); */
   background-color: #cccccc;
   opacity: 0.9;
   background-position: center;
